manifests/wordpress-blue/roullout-canary-mysql.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: mysql
  namespace: argo-rollout
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:latest
        ports:
        - containerPort: 3306
  strategy:
    canary:
      canaryService: mysql-green
      stableService: mysql
      steps:
      - setWeight: 25
      - pause: {duration: 5}
      - setWeight: 50
      - pause: {duration: 5}
      - setWeight: 75
      - pause: {duration: 5}
      - setWeight: 100
