manifests/wordpress-blue/roullout-canary-wordpress.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: wordpress
  namespace: argo-rollout
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - name: wordpress
        image: wordpress:php8.3-fpm-alpine
        ports:
        - containerPort: 80
  strategy:
    canary:
      canaryService: wordpress-green
      stableService: wordpress-blue
      steps:
      - setWeight: 20
      - pause: {}
      - setWeight: 40
      - pause: {duration: 10}
      - setWeight: 60
      - pause: {duration: 10}
      - setWeight: 80
      - pause: {duration: 10}
      - setWeight: 100
