manifests/wordpress-blue/wordpress-blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-blue
  namespace: argo-rollout
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
      version: blue
  template:
    metadata:
      labels:
        app: wordpress
        version: blue
    spec:
      containers:
      - name: wordpress
        image: wordpress:5.7
        ports:
        - containerPort: 80
