manifests/wordpress-blue/wordpress-blue-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-blue
  namespace: argo-rollout
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - name: wordpress
        image: wordpress:php8.1-apache
        ports:
        - containerPort: 80
