manifests/wordpress-blue/wordpress-blue-green-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: wordpress
  namespace: argo-rollout
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
      version: green
  template:
    metadata:
      labels:
        app: wordpress
        version: green
    spec:
      containers:
      - name: wordpress
        image: wordpress
        ports:
        - containerPort: 80
  strategy:
    blueGreen:
      activeService: wordpress-blue
      previewService: wordpress-preview
      autoPromotionEnabled: false
