manifests/wordpress-blue/wordpress-mysql-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: argo-rollout
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
