manifests/wordpress-blue/rollout.yaml
  GNU nano 6.2                                                                   wordpress-blue-green-rollout.yaml                                                                             apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: wordpress
  namespace: argo-rollout
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
      version: green
  template:
    metadata:
      labels:
        app: wordpress
        version: green
    spec:
      containers:
      - name: wordpress
        image: wordpress
        ports:
        - containerPort: 80
  strategy:
    blueGreen:
      activeService: wordpress-blue
      previewService: wordpress-preview
      autoPromotionEnabled: false


---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-preview
  namespace: argo-rollout
  labels:
    app: wordpress
    version: green
spec:
  selector:
    app: wordpress
    version: green
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-preview
  namespace: argo-rollout
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
      version: green
  template:
    metadata:
      labels:
        app: mysql
        version: green
    spec:
      containers:
      - name: mysql
        image: mysql
        ports:
        - containerPort: 3306
