manifests/wordpress-blue/wordpress-blues-svc-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: argo-rollout
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
