manifests/wordpress-blue/wordpress-green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-green
  namespace: argo-rollout
spec:
  selector:
    app: wordpress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
