manifests/wordpress-blue/wordpress-green-svc-mysql.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-preview
  namespace: argo-rollout
  labels:
    app: wordpress
    version: green
spec:
  selector:
    app: wordpress
    version: green
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
